syntax = "proto3";

package Messages;

message HelloRequest {
    string Name = 1;
}

message HelloResponse {
    string Message = 1;
}

service SayHelloService {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}